fixed margin issue on mobile

--- a/src/app/components/search-results/search-bar/search-bar.component.css
+++ b/src/app/components/search-results/search-bar/search-bar.component.css
@@ -163,4 +163,9 @@ input:focus {
     .links {
         flex-basis: 30%;
     }
-}
+}    
+@media (max-width: 505px) {
+    .shw-input-parent{
+        margin-left: 0px;
+    }
+}  
